# ultralytics_CenterLoss

./: .gitignore  README.md  envirionment.yml  pyproject.toml  requirements.txt
ultralytics/cfg/: default.yaml
ultralytics/engine/: trainer.py
ultralytics/nn/modules/: head.py
ultralytics/utils/: loss.py
